# illusory-friends

./: Cargo.toml  LICENSE
assets/: 9box.aseprite  asset_data.json  charconcept.aseprite  companionconcepts.aseprite  dialogueconcepts.aseprite  font.aseprite  font.fnt  ghost.aseprite  ghost.json  maribelle.aseprite  maribelle.json  mineconcepts again.aseprite  mineconcepts.aseprite  minewall.aseprite  overworld.json  pretendfriendsconcept.aseprite  spellpowerconcept.aseprite
src/: assets.rs  colors.rs  editor.rs  main.rs  types.rs  ustr.rs
src/assets/: animated_sprite.rs
