[package]
name = "safe"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3"
hecs = "0.6"
anyhow = "*"
async-trait = "*"
futures = "*"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mint = "*"
cgmath = { version = "*", features=["mint"] }
ustr = "*"
egui = "*"
egui-macroquad = "*"

[profile.dev.package."*"]
opt-level = 3